--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet"> 
   </head>
 <body>
-  <!-- The <h1> tag will make the text larger on the screen -->
-  <h1>Hello World!</h1>
-  <!-- The <p> tag starts a new paragraph (a new line!) -->
-  <p>This is my personal website, hosted with GitHub Pages.</p>
-  <p>To look at some fun photos and facts, go to my <a href="fun.html">fun page</a></p>
-  <!-- The <a href="..." tag will let you include a link on your website -->
-  <p><a href="https://github.com/ashleysuh">Link to my Github page</a></p>
-  <!-- Try updating these links to point to something related to you, like your Twitter, etc. -->
-  <p><a href="https://www.eecs.tufts.edu/~asuh/">Link to my Tufts website</a></p>
-</body>
-</html>
+  <div class="center">
+    <img src="fileName.jpg" style="float: left; max-width: 300px; max-height: auto; margin-right:25px; object-fit: scale-down;">
+    <!-- The <h1> tag will make the text larger on the screen -->
+    <h1>Hello World!</h1>
+    <!-- The <p> tag starts a new paragraph (a new line!) -->
+    <p>This is my personal website, hosted with GitHub Pages.</p>     
+    <p>Add some text here to describe your photo, or describe yourself!</p>
+    <p>To look at some other fun photos and facts about me, 
+       go to my <a href="fun.html">fun, miscellaneous page</a>!</p>
+    <!-- The <a href="..." tag will let you include a link on your website -->
+    <p><a href="https://github.com/ashleysuh">Link to my Github profile</a></p>
+    <!-- Try updating these links to point to something related to you, like your Twitter, etc. -->
+    <p><a href="https://www.eecs.tufts.edu/~asuh/">Link to my Tufts website</a></p>
