--- a/index.html
+++ b/index.html
@@ -25,3 +25,8 @@
     <p><a href="https://github.com/ashleysuh">Link to my Github profile</a></p>
     <!-- Try updating these links to point to something related to you, like your Twitter, etc. -->
     <p><a href="https://www.eecs.tufts.edu/~asuh/">Link to my Tufts website</a></p>
+  </div>
+</body>
+</html>
+
+
