--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 <body>
   <div class="center">
-    <img src="fileName.jpg" style="float: left; max-width: 300px; max-height: auto; margin-right:25px; object-fit: scale-down;">
+    <img src="stella.jpg" style="float: left; max-width: 300px; max-height: auto; margin-right:25px; object-fit: scale-down;">
     <!-- The <h1> tag will make the text larger on the screen -->
     <h1>Hello World!</h1>
     <!-- The <p> tag starts a new paragraph (a new line!) -->
