--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <p>To look at some other fun photos and facts about me, 
        go to my <a href="fun.html">fun, miscellaneous page</a>!</p>
     <!-- The <a href="..." tag will let you include a link on your website -->
-    <p><a href="https://github.com/ashleysuh">Link to my Github profile</a></p>
+    <p><a href="https://github.com/samanthafranks">Link to my Github profile</a></p>
     <!-- Try updating these links to point to something related to you, like your Twitter, etc. -->
-    <p><a href="https://www.eecs.tufts.edu/~asuh/">Link to my Tufts website</a></p>
+    <p><a href="https://www.eecs.tufts.edu/~sfranks/">Link to my Tufts website</a></p>
   </div>
 </body>
 </html>
